--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,9 +1,9 @@
 [defaults]
 retry_files_enabled = False
 host_key_checking=False
-roles_path=./roles
-library=./library
-callback_plugins = ./plugins/callback_plugins
-lookup_plugins = ./plugins/lookup_plugins
-filter_plugins = ./plugins/filter_plugins
+#roles_path=./roles
+#library=./library
+#callback_plugins = ./plugins/callback_plugins
+#lookup_plugins = ./plugins/lookup_plugins
+#filter_plugins = ./plugins/filter_plugins
 inventory = ./inventory/hosts
